<resources>
    <string name="app_name">BFit</string>
    <string name="scan">Scan</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snack</string>
    <string name="daily_calories_quota">0/3000</string>
    <string name="calories">Calories</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="yes">Yes</string>
    <string name="lowercase_letters">Lowercase Letters</string>
    <string name="uppercase_letters">Uppercase Letters</string>
    <string name="digits">Digits</string>
    <string name="special_characters">Special Characters</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="back">Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome Back!</string>
</resources>