<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bggrey">

    <View
        android:id="@+id/top_black_view"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/curve_view"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/ic_bg_curve"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_black_view" />

    <TextView
        android:id="@+id/txtResetPassword"
        android:layout_width="348dp"
        android:layout_height="61dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/reset_password"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/top_black_view" />


        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editResetEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/curve_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editResetEmail1"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="55dp"
            android:background="@drawable/white_box"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="   Email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/grey"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/editResetEmail"
            app:layout_constraintStart_toStartOf="@id/editResetEmail"
            app:layout_constraintTop_toBottomOf="@+id/editResetEmail" />
    </com.google.android.material.textfield.TextInputLayout>

<!--    <TextView-->
<!--        android:id="@+id/lblEmail"-->
<!--        android:layout_width="350dp"-->
<!--        android:layout_height="60dp"-->
<!--        android:layout_marginTop="55dp"-->
<!--        android:background="@drawable/white_box"-->
<!--        android:ems="10"-->
<!--        android:fontFamily="@font/roboto"-->
<!--        android:inputType="textEmailAddress"-->
<!--        android:textColorHint="@color/grey"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/curve_view" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editResetEmail"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNewPassword1"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:background="@drawable/white_box"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint=" New Password"
            android:inputType="textPassword"
            android:textColorHint="@color/grey"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/editNewPassword"
            app:layout_constraintStart_toStartOf="@id/editNewPassword"
            app:layout_constraintTop_toBottomOf="@+id/editNewPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editCNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNewPassword"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editCNewPassword1"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:background="@drawable/white_box"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint=" Confirm New Password"
            android:inputType="textPassword"
            android:textColorHint="@color/grey"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/editCNewPassword"
            app:layout_constraintStart_toStartOf="@id/editCNewPassword"
            app:layout_constraintTop_toBottomOf="@+id/editCNewPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnResetBack"
        android:layout_width="130dp"
        android:layout_height="47dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/btn_green"
        android:fontFamily="@font/roboto"
        android:text="@string/back"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:backgroundTint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCNewPassword" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="130dp"
        android:layout_height="47dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/btn_green_border"
        android:fontFamily="@font/roboto"
        android:text="@string/reset"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/green"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCNewPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>