<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/caloriesMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bggrey"
        android:paddingBottom="100dp">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_black_view"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@color/black"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:divider="@android:color/transparent"
            android:dividerHeight="0.0px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/daily_calories_quota"
                android:textColor="#ffffff"
                android:textSize="46sp"
                app:layout_constraintBottom_toBottomOf="@+id/top_black_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/calories"
                android:textColor="#ffffff"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/top_black_view"
                app:layout_constraintStart_toStartOf="@+id/calories"
                app:layout_constraintTop_toBottomOf="@+id/calories" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/curve_view"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/ic_bg_curve"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_black_view" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_breakfast"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/white_box"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:divider="@android:color/transparent"
            android:dividerHeight="0.0px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/curve_view">

            <ToggleButton
                android:id="@+id/btn_add_bfast"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/tbtn_add_minus"
                android:textOff=''
                android:textOn=''

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageViewIconSleep"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:contentDescription="string/breakfast"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_icon_apple" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/breakfast"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewIconSleep"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--            breakfast fragment-->
        <androidx.core.widget.NestedScrollView
            android:id="@+id/bfast_form_container"
            android:layout_width="match_parent"
            android:layout_height="797dp"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@+id/card_breakfast">


                    <FrameLayout
                        android:id="@+id/bfast_fragment_container"
                        android:layout_width="match_parent"
                        android:layout_height="666dp"
                        android:layout_marginTop="7dp" >

                    </FrameLayout>


        </androidx.core.widget.NestedScrollView>
<!--lunch fragment-->
        <androidx.core.widget.NestedScrollView
            android:id="@+id/lunch_form_container"
            android:layout_width="match_parent"
            android:layout_height="797dp"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@+id/card_lunch">

                <FrameLayout
                    android:id="@+id/lunch_fragment_container"
                    android:layout_width="match_parent"
                    android:layout_height="666dp"
                    android:layout_marginTop="7dp" />


        </androidx.core.widget.NestedScrollView>
<!--snack fragment-->
        <androidx.core.widget.NestedScrollView
            android:id="@+id/snack_form_container"
            android:layout_width="match_parent"
            android:layout_height="797dp"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@+id/card_snack">

            <FrameLayout
                android:id="@+id/snack_fragment_container"
                android:layout_width="match_parent"
                android:layout_height="666dp"
                android:layout_marginTop="7dp" >

            </FrameLayout>


        </androidx.core.widget.NestedScrollView>
<!--        dinner fragment-->
        <androidx.core.widget.NestedScrollView
            android:id="@+id/dinner_form_container"
            android:layout_width="match_parent"
            android:layout_height="797dp"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@+id/card_dinner">

            <FrameLayout
                android:id="@+id/dinner_fragment_container"
                android:layout_width="match_parent"
                android:layout_height="666dp"
                android:layout_marginTop="7dp" >

            </FrameLayout>


        </androidx.core.widget.NestedScrollView>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_lunch"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/white_box"
            android:clipChildren="false"
            android:clipToPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.894"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_breakfast">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/lunch"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:contentDescription="@string/lunch"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_icon_avocado" />

            <ToggleButton
                android:id="@+id/btn_add_lunch"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/tbtn_add_minus"
                android:textOff=''
                android:textOn=''
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_snack"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/white_box"
            android:clipChildren="false"
            android:clipToPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_lunch">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/snack"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.446" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:contentDescription="@string/snack"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_icon_carrot" />

            <ToggleButton
                android:id="@+id/btn_add_snack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/tbtn_add_minus"
                android:textOff=''
                android:textOn=''
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_dinner"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/white_box"
            android:clipChildren="false"
            android:clipToPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_snack">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/dinner"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:contentDescription="@string/dinner"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_icon_eggplant" />

            <ToggleButton
                android:id="@+id/btn_add_dinner"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/tbtn_add_minus"
                android:textOff=''
                android:textOn=''
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="679dp"
            tools:layout_editor_absoluteY="603dp"
            tools:listitem="@layout/recycler_view_item_2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>